...
        android:layout_marginBottom="@dimen/recharge_accept_bottom_margin"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/up_arrow"
            android:contentDescription="@string/con_desc_recharge_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:src="@drawable/up_white"
            />
...
            android:textColor="@color/transparent_white"
            android:textSize="20sp"
            app:font="@string/roboto_light"
            />

        <ImageView
            android:id="@+id/down_arrow"
            android:contentDescription="@string/con_desc_recharge_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/down_white"
            android:visibility="invisible"
...
