...
        android:layout_marginStart="@dimen/layout_left_margin"
        android:layout_marginRight="@dimen/layout_right_margin"
        android:layout_marginEnd="@dimen/layout_right_margin"
        android:orientation="horizontal">

        <com.ibm.mil.readyapps.telco.views.TelcoUsageView
            android:id="@+id/cycle_viewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bottomLeftText=" "
            app:bottomRightText=" "
            app:image="@drawable/data_dark_gray"
            app:percentUsed="5" />
...
